# perp_trader

./: .code-workspace  CLAUDE.md  Dockerfile  LOGGING_IMPROVEMENTS.md  main.py  pyproject.toml  settings.py
app/: .coverage  README.md  main.py  pyproject.toml  settings.py
app/modules/: arbitrage_position.py  base.py  data_feed.py  strategy.py  ui_renderer.py
app/tests/: conftest.py  test_data_feed.py  test_strategy.py
modules/: arbitrage_position.py  data_feed.py  strategy.py  ui_renderer.py
scripts/: build.sh  common.sh  open.sh  run.sh  ssh_deploy.sh  update_container.sh
